# First_OS

./: .gitignore  Cargo.toml
.cargo/: config.toml
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  pic.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic  stack_overflow.rs
