[package]
name = "first_os"
version = "0.1.0"
edition = "2018"
author = Miguelfarialopes2729  

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

#while i dont make a native bootloader bootimage will have to do
[dependencies]
bootloader = "0.9"